Premiers ajout de css et début de structure

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Top 5 Meilleurs Séries</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Top 5 des meilleurs séries !</h1>
+    </header>
+
+    <section>
+        <div class="serie">Dexter</div>
+        <div class="serie">Mr.Robot</div>
+        <div class="serie">Breaking Bad</div>
+        <div class="serie">Lost</div>
+        <div class="serie">Black Mirror</div>
+    </section>
+
+    <footer>
+        <nav>
+            <ul>
+                <li>Informations</li>
+                <li>Contact</li>
+                <li>Conditions d'utilisation</li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html></html>
